Avanzando en mi clase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:sqlserver://${PUSINEX_DB_SERVER};databaseName=tareas
+spring.datasource.username=${PUSINEX_DB_USER}
+spring.datasource.password=${PUSINEX_DB_PASS}
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2008Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
