--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=${PUSINEX_DB_USER}
 spring.datasource.password=${PUSINEX_DB_PASS}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2008Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
